finished middle site

--- a/index.html
+++ b/index.html
@@ -27,6 +27,50 @@
     </div>
   </div>
 </div>
+
+<img class="ui centered image" src="//cdn.shopify.com/s/files/1/1035/5187/files/logoshort_800x.png?v=1543956749">
+
+<div class="ui borderless middlemenu menu">
+  <div class="ui centered grid container">
+    <div class="ui dropdown item">
+      <div class="text">MEN</div>
+      <i class="dropdown icon"></i>
+      <div class="menu">
+        <div class="item">SHIRTS</div>
+      </div>
+    </div>
+
+    <div class="ui dropdown item">
+      <div class="text">WOMEN</div>
+      <i class="dropdown icon"></i>
+      <div class="menu">
+        <div class="item">SHIRTS</div>
+      </div>
+    </div>
+
+    <div class="ui dropdown item">
+      <div class="text">KIDS</div>
+      <i class="dropdown icon"></i>
+      <div class="menu">
+        <div class="item">SHIRTS</div>
+      </div>
+    </div>
+
+    <div class="ui dropdown item">
+      <div class="text">BRAND</div>
+      <i class="dropdown icon"></i>
+      <div class="menu">
+        <div class="item">ALOHA SURF PROJECT</div>
+      </div>
+    </div>
+
+    <a class="fitted item">SALE</a>
+
+  </div>
+</div>
+
+<img class="ui fluid image" src="https://scontent-lax3-1.xx.fbcdn.net/v/t31.0-8/24837428_10155273996755885_8755345908872996362_o.jpg?_nc_cat=110&_nc_oc=AQl7KMyF--7qUY_dB6m7Ix4jkGx5O-_L3vqCHlgBUMKsHgwIQfDwLpfXqD3bTswuC_TdEX967-CFclXTW3a9lrBd&_nc_ht=scontent-lax3-1.xx&oh=555b49984da88f7d4fa6448703b2e664&oe=5E3B3637">
+
 <script>
   $('.ui.dropdown')
         .dropdown();
