--- a/index.html
+++ b/index.html
@@ -71,6 +71,42 @@
 
 <img class="ui fluid image" src="https://scontent-lax3-1.xx.fbcdn.net/v/t31.0-8/24837428_10155273996755885_8755345908872996362_o.jpg?_nc_cat=110&_nc_oc=AQl7KMyF--7qUY_dB6m7Ix4jkGx5O-_L3vqCHlgBUMKsHgwIQfDwLpfXqD3bTswuC_TdEX967-CFclXTW3a9lrBd&_nc_ht=scontent-lax3-1.xx&oh=555b49984da88f7d4fa6448703b2e664&oe=5E3B3637">
 
+<div class="footer-background">
+<div class="ui three column grid container">
+  <div class="column">
+    NAVIGATION
+    <hr/>
+    <div class="ui list">
+      <div class="item">About us</div>
+      <div class="item">Videos</div>
+      <div class="item">Store Locations</div>
+    </div>
+  </div>
+  <div class="column">
+    MAIN MENU
+    <hr/>
+    <div class="ui list">
+      <div class="item">Men</div>
+      <div class="item">Women</div>
+      <div class="item">Kids</div>
+    </div>
+  </div>
+  <div class="column">
+    CONNECT
+    <hr/>
+    <div class="ui list">
+      <div class="item">Sign up for the latest updates</div>
+      <div class="ui labeled input">
+        <input type="text" placeholder="Enter email address">
+        <div class="ui black label">
+          Join
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+
 <script>
   $('.ui.dropdown')
         .dropdown();
